--- a/postgres/docker-compose.yaml
+++ b/postgres/docker-compose.yaml
@@ -6,5 +6,9 @@ services:
       POSTGRES_PASSWORD: mypassword
     ports:
     - 5432:5432
+    resources:
+      limits:
+        cpus: '1'
+        memory: 1G
     volumes:
        - ./data:/var/lib/postgresql/data
