fix: add `deploy` as parent field to `resources`

--- a/postgres/docker-compose.yaml
+++ b/postgres/docker-compose.yaml
@@ -5,10 +5,11 @@ services:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
     ports:
-    - 5432:5432
-    resources:
-      limits:
-        cpus: '1'
-        memory: 1G
+    - 5432:5432 
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
     volumes:
        - ./data:/var/lib/postgresql/data
