flink: add config

--- a/flink/docker-compose.yml
+++ b/flink/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: jobmanager
     volumes:
       - ./usrlib/:/opt/flink/usrlib
+      - ./flink_conf.yaml:/opt/flink/conf/config.yaml:ro
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
 
